<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_gopay_bg"
    android:padding="@dimen/margin_medium">

    <FrameLayout
        android:id="@+id/fl_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_saldo_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                android:id="@+id/title_gopay"
                style="@style/Theme.GojekClone.Text.Subtitle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/gopay"
                android:drawablePadding="@dimen/margin_small"
                app:drawableStartCompat="@drawable/ic_avatar_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saldo"
                style="@style/Theme.GojekClone.Text.Subtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/rp12_378"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_gopay" />

            <TextView
                android:id="@+id/btn_cek_riwayat"
                style="@style/Theme.GojekClone.Text.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/klik_cek_riwayat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saldo" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


    <TextView
        android:id="@+id/tv_pay"
        style="@style/Theme.GojekClone.Text.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="@+id/fl_saldo"
        app:layout_constraintEnd_toStartOf="@+id/tv_top_up"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/fl_saldo"
        app:layout_constraintTop_toBottomOf="@id/btn_pay" />

    <TextView
        android:id="@+id/tv_top_up"
        style="@style/Theme.GojekClone.Text.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:text="@string/top_up"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_pay"
        app:layout_constraintEnd_toStartOf="@+id/tv_explore"
        app:layout_constraintStart_toEndOf="@+id/tv_pay" />

    <TextView
        android:id="@+id/tv_explore"
        style="@style/Theme.GojekClone.Text.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_top_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_top_up" />

    <ImageButton
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_pay"
        app:layout_constraintBottom_toTopOf="@+id/tv_pay"
        app:layout_constraintEnd_toEndOf="@+id/tv_pay"
        app:layout_constraintStart_toStartOf="@+id/tv_pay"
        app:layout_constraintTop_toTopOf="@+id/fl_saldo" />

    <ImageButton
        android:id="@+id/btn_top_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_top_up"
        app:layout_constraintBottom_toBottomOf="@+id/btn_pay"
        app:layout_constraintEnd_toEndOf="@+id/tv_top_up"
        app:layout_constraintStart_toStartOf="@+id/tv_top_up"
        app:layout_constraintTop_toTopOf="@+id/btn_pay" />

    <ImageButton
        android:id="@+id/btn_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_explore"
        app:layout_constraintBottom_toBottomOf="@+id/btn_top_up"
        app:layout_constraintEnd_toEndOf="@+id/tv_explore"
        app:layout_constraintStart_toStartOf="@+id/tv_explore"
        app:layout_constraintTop_toTopOf="@+id/btn_top_up" />

</androidx.constraintlayout.widget.ConstraintLayout>